# sphinx-open-needs

./: .buildinfo  .envrc  .gitignore  .readthedocs.yaml  Makefile  README.rst  index.html  objects.inv  pyproject.toml  searchindex.js  sitemap.xml
.github/workflows/: ci.yml  docs.yml
docs/: conf.py  index.rst  requirements.txt
sphinx_open_needs/: __init__.py  son.py  util.py
tests/: test_basic.py.txt
tests/roots/test-basic/: conf.py
