[tool.poetry]
name = "sphinx-open-needs"
version = "0.1.1"
description = ""
authors = ["team useblocks <info@useblocks.com>"]

license = "MIT"
readme = "README.rst"
repository = "https://github.com/open-needs/sphinx-open-needs"
documentation = "https://open-needs.org/sphinx-open-needs"
classifiers=[
        'Development Status :: Under-development',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Topic :: Documentation',
        'Topic :: Utilities',
        'Framework :: Sphinx :: Extension',
    ]

[tool.poetry.dependencies]
python = ">3.7,<4.0"
sphinx = ">=4.2"
sphinxcontrib-needs = ">=0.7.9,<1.0"
requests = ">=2"
jinja2 = ">=2"
jira2markdown = ">=0.1"
m2r2 = ">=0.2"
click = ">=7.0"
sphinxcontrib-programoutput = ">=0.17"

[tool.poetry.dev-dependencies]
# test dependencies
sphinx-testing = ">=1.0"
pytest = "^7"
pytest-xdist="*"  # parallelisation
responses = "^0.12.1"
requests-mock = ">=1.9.3"

# type checking
mypy = "^0.960"
types-requests = "^2.27.25"
types-setuptools = "^57.4.14"
docutils-stubs = "^0.0.22"

sphinx-immaterial = { version = ">0.7.0", optional = true }

# lint dependences
flake8 = "^3.9.0"
pep8-naming = "^0.11.1"

# formatting dependencies
black = "^22"
isort = "^5.7.0"
flake8-isort = "^4.0.0"
flake8-black = "^0.2.1"
typed_ast = "^1.5.0"

[tool.poetry.scripts]
sne = "sphinx_needs_enterprise.scripts.cli:cli"

[tool.pytest.ini_options]
asyncio_mode= "auto"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
show_error_codes = true
implicit_reexport = true
files = "sphinx_needs"
ignore_missing_imports = true
namespace_packages = true

[tool.poetry.extras]
docs = ["sphinx>=4.0"]
immaterial = ["sphinx-immaterial"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"


